


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asad"
version = "0.0.1"
description = "Asad's personal data science utility library."
authors = [
    { name="Asad Patel", email="asadnotfound404@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["exceptions", "logging_core"]
